--- a/styles/index.css
+++ b/styles/index.css
@@ -2,3 +2,14 @@ h1 {
     color:rgb(55, 122, 181);
     text-align: center;
 }
+
+.button {
+    font-size:24px; 
+    background-color: #31316e;
+    color:#ffffff;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    
+}
