--- a/styles/scratch.css
+++ b/styles/scratch.css
@@ -9,6 +9,10 @@ div {
     position: absolute;
 }
 
+h1 {
+    text-decoration: underline;
+}
+
 /* div blocks */
 .header {
     left:0px;
@@ -24,6 +28,7 @@ div {
     height: 10%;
     width: 100%;
     background-color: #6e0f00;
+    color:white;
 }
 
 .button {
@@ -43,20 +48,17 @@ div {
     right:18%;
     bottom:10%;
     background-color:rgb(45, 45, 45);
-    color:white;
+    color:rgb(255, 255, 255);
     overflow-y: auto;    
     font-size: 20px;
 }
 
 .quick_menu{
     top:60px;
-    left: 5%;
+    left: 2%;
     right: 84%;
-    /* padding-left: 20px;
-    padding-right:20px; */
-    /* right: 20%; */
-    background-color:rgb(255, 255, 255);
-    /* color:white; */
+    background-color:rgb(106, 106, 106);
+    color: rgb(255, 255, 255);
 }
 
 /* Styling */
