--- a/styles/scratch.css
+++ b/styles/scratch.css
@@ -59,6 +59,8 @@ h1 {
     right: 84%;
     background-color:rgb(106, 106, 106);
     color: rgb(255, 255, 255);
+    font-size:18px;
+
 }
 
 /* Styling */
